--- a/style.css
+++ b/style.css
@@ -1,17 +1,28 @@
 html {
   height: 100%;
   width: 100%;
-  font-family: monospace
+  font-family: monospace;
 }
 
 body {
   min-height: 100%;
   min-width: 100%;
-  background: linear-gradient(#fff, #333);
+  background-image: linear-gradient(120deg, #4ca1af, #c4e0e5);
 }
 
-button {
-  font-size: 7px;
+.button {
+  font-size: 12px;
+  font-weight: lighter;
+  border-radius: 10px;
+  cursor: pointer;
+  margin: 2px;
+  margin-bottom: 10px;
+  padding: 10px;
+}
+
+.button:hover {
+  color:white;
+  background-color: black;
 }
 
 #main-content {
@@ -20,7 +31,7 @@ button {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  border: 1px solid rgba(1, 95, 62, 0.666);
+  border: 2px solid #000;
   background: rgba(255, 255, 255, 0.331);
   padding: 15px 20px 18px 18px;
   border-radius: 5px;
@@ -32,7 +43,41 @@ button {
   border: 1px solid #333;
   background: rgba(255, 255, 255, 0.75);
   padding: 15px 20px 18px 18px;
-  border-radius: 5px;
+  border-radius: 15px;
   box-shadow: 2px 5px 5px #333;
   font-weight: bold;
+  text-emphasis-style: bold;
+}
+
+h2 {
+  text-align: center;
+  font-size: 2rem;
+}
+
+#tasks {
+  justify-content: space-between;
+  padding: 5px;
+}
+
+input {
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: bold;
+  padding-left: 10px;
+  height: 30px;
+}
+
+.add-todo {
+  display: flex;
+  justify-content: space-between;
+  font-style: italic;
+  font-weight: lighter;
+  margin: 1px;
+}
+
+.todo-item {
+  padding-top: 12px;
+  text-align: auto;
+  margin: 1px;
+
 }
